--- a/src/main.sass
+++ b/src/main.sass
@@ -66,6 +66,39 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
         left: 21px
         top: 19px
 
+input[type="radio"]
+    background: red
+    text-align: center
+    padding: 5px 43px!important
+    width: 28px !important
+    label 
+        display: inline-flex
+        align-items: center
+        user-select: none
+        &::before 
+            content: ''
+            display: inline-block
+            width: 1em
+            height: 1em
+            flex-shrink: 0
+            flex-grow: 0
+            border: null
+            border-radius: 50%
+            margin-right: 0.5em
+            background-repeat: no-repeat
+            background-position: center center
+            background-size: 50% 50%
+    &:not(:disabled)
+        &:active
+            ~label
+                &::before 
+                    background-color: #000000
+                    border-color: $head
+    &:checked
+        ~label
+            &::before 
+                border-color: #040404
+                background-color: #0e0f0f
 .button
     height: 60px
     width: 340px
