--- a/src/main.sass
+++ b/src/main.sass
@@ -46,41 +46,6 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
         top: 14px
         font-size: 14px
 
-
-
-input[type="radio"]
-    background: red
-    text-align: center
-    padding: 5px 43px!important
-    width: 28px !important
-    label 
-        display: inline-flex
-        align-items: center
-        user-select: none
-        &::before 
-            content: ''
-            display: inline-block
-            width: 1em
-            height: 1em
-            flex-shrink: 0
-            flex-grow: 0
-            border: null
-            border-radius: 50%
-            margin-right: 0.5em
-            background-repeat: no-repeat
-            background-position: center center
-            background-size: 50% 50%
-    &:not(:disabled)
-        &:active
-            ~label
-                &::before 
-                    background-color: #000000
-                    border-color: $head
-    &:checked
-        ~label
-            &::before 
-                border-color: #040404
-                background-color: #0e0f0f
 .button
     height: 60px
     width: 340px
@@ -98,4 +63,22 @@ input[type="radio"]
     &:hover
         cursor: pointer
         background-color: $third  
-  
+
+.radio
+    a
+        height: 25px
+        width: 25px
+        border-radius: 50%
+        background: $red
+        border: 2px solid $text-white
+    &.active
+        border: 2px solid $head
+    &::before 
+            content: ""
+            display: inline-block
+            vertical-align: middle
+            padding-top: 100%   
+    .black
+        background: $head !important
+        
+        
